--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 
+project(
+    hello_world
+    LANGUAGES CXX
+)
+
 add_executable(hello_world hello_world.cpp)
